# Shanon-Web3

./: .dockerignore  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  README.md  deploy.sh  deployed_programs.json  docker-compose.yml  fly.toml  netlify.toml  package-lock.json  package.json  vercel.json
crates/api-server/: Cargo.toml
crates/api-server/src/: main.rs
programs/vulnerable-vault/: Cargo.toml
programs/vulnerable-vault/kani_proofs/: Cargo.toml  proof_create_voting_escrow_access_control.rs  proof_create_voting_escrow_account_ownership.rs  proof_deposit_account_ownership.rs  proof_derive_pda_pda_validation.rs  proof_extend_lock_access_control.rs  proof_get_secure_price_account_ownership.rs  proof_handle_auto_pause_access_control.rs  proof_handle_auto_pause_account_ownership.rs  proof_handle_extend_lock_arithmetic_safety.rs  proof_handle_initialize_price_state_arithmetic_safety.rs  proof_handle_initialize_user_shares_arithmetic_safety.rs  proof_handle_transfer_with_fee_check_access_control.rs  proof_handle_transfer_with_fee_check_account_ownership.rs  proof_handle_transfer_with_fee_check_balance_conservation.rs  proof_handle_unpause_arithmetic_safety.rs  proof_initialize_emergency_state_access_control.rs  proof_initialize_emergency_state_account_ownership.rs  proof_initialize_price_state_pda_validation.rs  proof_initialize_user_shares_access_control.rs  proof_initialize_vault_pda_validation.rs  proof_proof_autopause_constraint_1_pda_validation.rs  proof_proof_create_proposal_pda_validation_bump_pda_validation.rs  (+583 more)
programs/vulnerable-vault/src/: lib.rs  (+5 more)
(+181 files in other folders)
