[package]
name = "api-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "security-dashboard-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
futures = "0.3"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
