[package]
name = "vulnerable-vault"
version = "0.1.0"
edition = "2021"

[package.metadata.solana]
program-id = "47poGSxjXsErkcCrZqEJtomHrdxHtfAbpfYmx3xRndVJ"

[lib]
crate-type = ["cdylib", "lib"]
name = "vulnerable_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
exploit-registry = { path = "../exploit-registry", features = ["cpi"] }
